[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "twisted"
description = "API Integrations with slack as a gateway"
version = "1.0.0"
authors = [
    { name = "Nahuel Ambrosini", email = "ambro17.1@gmail.com" }
]
dependencies = [
    "slack-bolt",  # Slack Bot Framework
    "requests",    # To do api calls
    "loguru",      # For logging without complexity
    "boto3",       # To read app secrets from secrets manager on production
]
[project.optional-dependencies]
dev = [
  "pytest",
]